Slight tweaks to size, fixed nav collapse.

--- a/client/main.less
+++ b/client/main.less
@@ -49,7 +49,6 @@ a:hover {
 */
 
 .masthead-container {
-    //   max-width: 1024px;
     padding: 0 0;
     margin: 0 auto;
 }
@@ -65,6 +64,10 @@ a:hover {
     margin-right: auto;
 }
 
+.nav {
+    font-size: 13pt;
+    text-align: center;
+}
 
 .navbar {
   margin-bottom: 10px;
@@ -88,7 +91,6 @@ a:hover {
     top: 100;
   margin: 0 auto;
   padding-left: 0px;
-//  max-width: 1200px;
   font-style: normal;
   text-align: left;
 }
